assets/src/styles/blocks/Covers/styles/CampaignCovers.scss
@mixin campaign_covers($overlay, $cta-colour, $cta-colour-hover, $cta-font, $cta-spacing: 10, $cta-left: 28px, $cta-bottom: 30px) {
  .cover {
    padding-left: 8px;
    padding-right: 8px;
  }

  .thumbnail-large {
    max-height: none;
    margin-bottom: 40px;

    img {
      margin: 0;
    }

    &:before {
      content: none;
    }

    &:after {
      content: "";
      display: block;
      position: absolute;
      top: 0;
      left: 0;
      width: 100%;
      height: 100%;
      background: $overlay;
      opacity: 0;
      transition: opacity $transition ease-in-out;
    }

    .yellow-cta {
      color: $cta-colour;
      text-shadow: none;
      left: $cta-left;
      bottom: $cta-bottom;
      margin: 0;
      width: auto;
      font-family: $cta-font;
      font-size: $font-size-sm;
      line-height: 1.5625rem;
      transition: color $transition ease-in-out;
      @include letter-spacing($cta-spacing);
    }

    &:hover {
      &:after {
        opacity: 0.6;
      }

      .yellow-cta {
        color: $cta-colour-hover;
      }
    }
  }
}

.campaign-covers-block {
  &.carousel-layout {
    .cover {
      min-width: 260px;

      &:not(:last-child) {
        margin-inline-end: $sp-2;
      }

      @include medium-and-up {
        min-width: 276px;

        &:not(:last-child) {
          margin-inline-end: $sp-3;
        }
      }

      @include large-and-up {
        min-width: 296px;
      }

      @include x-large-and-up {
        min-width: 356px;
      }
    }

    .carousel-control-prev,
    .carousel-control-next {
      top: 71px;
    }
  }

  &.grid-layout .covers {
    @supports (display: grid) {
      grid-template-columns: 1fr;

      @include medium-and-up {
        grid-column-gap: $sp-3;
        grid-template-columns: repeat(2, 1fr);
      }

      @include large-and-up {
        grid-template-columns: repeat(3, 1fr);
      }
    }
  }

  .covers {
    .thumbnail-large {
      position: relative;
      overflow: hidden;
      @include background-before-opacity(rgba(22, 22, 22, 0.1));

      @include large-and-up {
        @include background-before-opacity(rgba(22, 22, 22, 0.65));

        &:hover {
          &:before {
            opacity: 0.1;
          }
        }
      }

      img {
        width: 100%;
        height: 190px;
        object-fit: cover;
      }

      .yellow-cta {
        text-align: center;
        font-size: $font-size-md;
        font-family: $roboto;
        color: $yellow;
        font-weight: 500;
        position: absolute;
        left: 0;
        bottom: 0;
        width: 100%;
        z-index: 2;
        margin-bottom: $sp-2;
        text-shadow: 1px 1px $grey-80;

        @include medium-and-up {
          margin-bottom: 20px;
          font-size: $font-size-xs;
        }

        @include large-and-up {
          margin-bottom: 40px;
          font-size: $font-size-md;
        }

        &:hover {
          text-decoration: none;
        }
      }
    }
  }
}

